--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 	<header>
 		<div class="container">
 			<h1 class="logo"><a href="#"><img src="./assets/images/logo.png" alt="webtech"></a></h1>
-			<nav>
-				<ul>
-					<li class="active"><a href="#">home</a></li>
-					<li><a href="#">service</a></li>
-					<li><a href="#">about</a></li>
-					<li><a href="#">portfolio</a></li>
-					<li><a href="#">blog</a></li>
-				</ul>
-			</nav>
+			<div class="nav__wrap">
+				<a href="" class="open__nav">
+					<span></span>
+				</a>
+				<nav>
+					<ul>
+						<li class="active"><a href="#">home</a></li>
+						<li><a href="#">service</a></li>
+						<li><a href="#">about</a></li>
+						<li><a href="#">portfolio</a></li>
+						<li><a href="#">blog</a></li>
+						<li class="contact"><a href="#">contact us</a></li>
+					</ul>
+				</nav>
+			</div>
 			<a class="button button_style02" href="#">contact us</a>
 		</div>
 	</header>
@@ -91,7 +97,6 @@
 					<li><a href="#">development</a></li>
 					<li><a href="#">design</a></li>
 					<li><a href="#">marketing</a></li>
-					<li><a href="#">media</a></li>
 				</ul>
 				<div class="portfolio__wrap">
 					<div class="portfolio__item">
